# actix-web-async-graphql

./: Cargo.toml
backend/: .env  Cargo.toml  README.md  VERSIONS.txt  package.json
backend/src/: main.rs
backend/src/dbs/: mysql.rs
backend/src/gql/: mod.rs  mutations.rs  queries.rs
backend/src/users/: models.rs  services.rs
backend/src/util/: constant.rs
frontend-handlebars/: Cargo.toml  README.md
frontend-handlebars/src/: main.rs
frontend-handlebars/src/routes/: mod.rs
frontend-handlebars/src/util/: common.rs
frontend-handlebars/templates/: index.html
frontend-wasm/: Cargo.toml
frontend-yew/: Cargo.toml  README.md  trunk.toml
frontend-yew/src/: main.rs
frontend-yew/src/pages/: home.rs  mod.rs  not_found.rs  projects.rs  users.rs
