[workspace]
members = [
    "./backend",
    "./frontend-handlebars",
    "./frontend-wasm",
    "./frontend-yew",
]
resolver = "2"

[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"
debug = true

# 对于 release 版本，去除所有的 debug 符号
[profile.release]
#opt-level = 3
incremental = true
strip = "debuginfo"
lto = true
#lto = "thin"#codegen-units = 1


[profile.test]
[profile.bench]
