[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-rt = "2.7.0"
actix-web = { version = "4.0.1" }
#async-graphql = { version = "3.0.38", features = ["chrono","apollo_tracing"] }
async-graphql = { version = "3.0.38", features = ["chrono", "apollo_persisted_queries"] }
async-graphql-actix-web = "3.0.38"
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
rbatis = { version = "3.1.6", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }
rbson = "2.0.3"
serde = { version = "1.0.136", features = ["derive"] }