[package]
name = "frontend-handlebars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
handlebars = "4.2.2"
serde = "1.0.136"
serde_json = "1.0.79"
tide = "0.16.0"
